<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/instrument_name_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/instrument_name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instrument_strings_recycler"
        app:layout_constraintTop_toBottomOf="@id/instrument_name_layout"
        app:layout_constraintBottom_toTopOf="@id/add_string_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/add_string_text"
        app:layout_constraintTop_toBottomOf="@id/instrument_strings_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_string"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_string_recycler"
        app:layout_constraintTop_toBottomOf="@id/add_string_text"
        app:layout_constraintBottom_toTopOf="@id/save_instrument_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/save_instrument_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/save_instrument_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>
