<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/instrument_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fret_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/group_accidental_display"
        android:text="@string/fret_count" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/group_fret_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/group_accidental_display"
        app:layout_constraintTop_toBottomOf="@id/fret_count_text">

        <Button
            android:id="@+id/button_remove_fret"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="-" />

        <Button
            android:id="@+id/button_fret_count"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <Button
            android:id="@+id/button_add_fret"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="+" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/note_display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/group_accidental_display"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/note_names" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/group_accidental_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedButton="@+id/button_sharp"
        app:layout_constraintStart_toEndOf="@+id/group_fret_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_display_text"
        app:singleSelection="true"
        app:selectionRequired="true">

        <Button
            android:id="@+id/button_sharp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharp" />

        <Button
            android:id="@+id/button_flat"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instrument_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_accidental_display"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>